# vertigal

./: .gitignore  meson.build  meson.options
include/: nuklear.h  nuklear_glfw_gl4.h
include/glad/: glad.h
include/vertigal/: arena.h  callback.h  camera.h  files.h  glfuncs.h  glstrcuts.h  gui.h  iofuncs.h  models.h  movement.h  player.h
res/: cessna_tri.mtl  fragment.glsl  geometry.glsl  lighting.glsl  vertex.glsl
src/: TODO  main.c
src/gl/: callback.c  gl.c  glad.c  gui.c  renderer.c  shaders.c
src/gl/gui/: glfw_gl4_nuklear.c  gui.c
src/gl/transformations/: camera.c  movement.c
src/io/: filemapping.c  fileutils.c  formatedprint.c  imageloader.c  objmodel.c
src/models/: object_arena.c  objmodel.c  objutils.c
src/utils/: VertexUtil.py
